...
                            android:layout_marginEnd="@dimen/dp_8"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/cl_location_icons"
                            app:layout_constraintTop_toTopOf="parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edt_search_direction"
                                style="@style/SearchTextMedium"
                                android:layout_width="@dimen/dp_0"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/dp_16"
                                android:background="@android:color/transparent"
                                android:ellipsize="end"
...
                            android:layout_marginBottom="@dimen/dp_12"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/cl_location_icons">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edt_search_dest"
                                style="@style/SearchTextMedium"
                                android:layout_width="@dimen/dp_0"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/dp_16"
                                android:background="@android:color/transparent"
                                android:ellipsize="end"
...
                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:id="@+id/cl_car"
                                android:layout_width="@dimen/dp_0"
                                android:layout_height="wrap_content"
                                app:layout_constraintStart_toEndOf="@id/iv_car"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintEnd_toStartOf="@+id/card_drive_go">

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/tv_drive_minute"
                                    style="@style/SP14BoldBlackTextStyle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cl_my_location" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_search_places_suggestion_direction"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:background="@color/color_f8f8f7"
                        android:overScrollMode="never"
                        app:layout_constraintTop_toBottomOf="@+id/cl_my_location" />
...
