...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <org.maplibre.android.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/mapLoading"
            android:layout_width="match_parent"
...
            android:layout_marginStart="@dimen/dp_0"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_8"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/dp_8"
            app:cardUseCompatPadding="false"
            app:layout_constraintBottom_toTopOf="@id/card_direction"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:layout_gravity="center"
...
