<resources>
    <string name="app_name">Amazon Location</string>
    <!-- bottom navigation -->
    <string name="menu_navigate">Navigate</string>
    <string name="menu_tracking">Trackers</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_more">More</string>

    <string name="terms_condition">Terms &amp; Conditions</string>
    <string name="help">Help</string>

    <!--Basic user location permission-->
...
    <string name="label_map_representation_for_different_countries">Map representation for different countries</string>
    <string name="description_arg">Argentina\'s view on the Southern Patagonian Ice Field and Tierra Del Fuego, including the Falkland Islands, South Georgia, and South Sandwich Islands</string>
    <string name="description_egy">Egypt\'s view on Bir Tawil</string>
    <string name="description_ind">India\'s view on Gilgit-Baltistan</string>
    <string name="description_ken">Kenya\'s view on the Ilemi Triangle</string>
    <string name="description_mar">Morocco\'s view on Western Sahara</string>
    <string name="description_rus">Russia\'s view on Crimea</string>
    <string name="description_sdn">Sudan\'s view on the Halaib Triangle</string>
    <string name="description_srb">Serbia\'s view on Kosovo, Vukovar, and Sarengrad Islands</string>
    <string name="description_sur">Suriname\'s view on the Courantyne Headwaters and Lawa Headwaters</string>
    <string name="description_syr">Syria\'s view on the Golan Heights</string>
    <string name="description_tur">Turkey\'s view on Cyprus and Northern Cyprus</string>
    <string name="description_tza">Tanzania\'s view on Lake Malawi</string>
...
